# akagachi_eye_robot_ros

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  LICENSE  README.md  package.xml
akagachi_demo/: CMakeLists.txt  package.xml
akagachi_demo/calibration_param/: BSW20KM11BK.json
akagachi_demo/config/: config.yaml  rsv10_no1_config.yaml
akagachi_demo/docker/: Dockerfile
akagachi_demo/launch/: dlib_detection_demo.launch  follow_movement_demo.launch  manual_control.launch  minimal.launch  rcserco_manual_control.launch  rcservo_dlib_detection_demo.launch  rcservo_follow_movement_demo.launch  rcservo_manual_control.launch  rcservo_minimal.launch  rsv10_dlib_detection_demo.launch  rsv10_manual_control.launch  rsv10_minimal.launch
akagachi_demo/model/: 1B_eyelid.stl  eyes.urdf.xacro  rsv10_eyes.urdf.xacro
akagachi_demo/scripts/: arduino.py  blinkstate_publisher.py  foveation_calculator.py  pyrs_rsv10.py  rsv10_eye_control.py  velocity_eyes.py  vision_dlib.py  vision_optical_flow.py
arduino_sketch/: arduino_sketch.ino
calibration_param/: ELP_170.json
config/: config.yaml  layout.rviz
face_model/: dlib_dat_download.sh
launch/: follow_movement_demo.launch  manual_control.launch  minimal.launch
model/: README.md
scripts/: vision_optical_flow.py
